css and styling changes

--- a/samples.html
+++ b/samples.html
@@ -25,7 +25,7 @@
         <script src="canvas.js"></script>
         <h1>Work Samples</h1>
       </div>
-      <div class="moved-left">
+      <div class="moved-left-samples">
       <div>
         <h3>Writing: <a href="projects/fields_report.pdf" id="scratch" target="_blank">Computer Science Fields Report</a></h3>
       </div>
