fixing header error

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        <canvas id="myCanvas" width="950" height="30"></canvas>
        <script src="canvas.js"></script>
        <!--Javascript link for greeting that changes depending on time of day -->
-       <h2 id="greeting"></h2>
+       <h2 id="greeting">Welcome to my website!</h2>
        <script src = "greeting.js"></script>
       </div>
       
