--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="top">
-      <a href="index.html"><img src="images/logo.svg" alt="Logo" class="centerI" width="24%"></a>
+      <a href="index.html"><img src="images/logo.svg" alt="Logo" class="centerI"></a>
       <ul id="navigation"> 
           <li class="navItem"><a href="index.html" class="navLink">Home</a></li>
           <li class="navItem"><a href="about.html" class="navLink">About Me</a></li>
