--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
   <body>
     <div class="top">
       <a href="index.html"><img src="images/logo.svg" alt="Logo" class="centerI"></a>
-      <ul id="navigation"> 
+      <div class = "top-bar">
+        <ul id="navigation">
           <li class="navItem"><a href="index.html" class="navLink">Home</a></li>
           <li class="navItem"><a href="about.html" class="navLink">About Me</a></li>
           <li class="navItem"><a href="education.html" class="navLink">Education</a></li>
@@ -18,7 +19,8 @@
           <li class="navItem"><a href="accomplishments.html" class="navLink">Accomplishments</a></li>
           <li class="navItem"><a href="profiles.html" class="navLink">Profile Links</a></li>
           <li class="navItem"><a href="contact.html" class="navLink">Contact Me</a></li>
-      </ul>
+        </ul>
+        </div>
     </div>
 
     <!-- Brief Bio and a couple pictures: -->
