--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
   <body>
     <div class="top">
         <a href="index.html"><img src="images/logo.svg" alt="Logo" class="centerI"></a>
+        <div class = "top-bar">
         <ul id="navigation">
           <li class="navItem"><a href="index.html" class="navLink">Home</a></li>
           <li class="navItem"><a href="about.html" class="navLink">About Me</a></li>
@@ -19,6 +20,7 @@
           <li class="navItem"><a href="profiles.html" class="navLink">Profile Links</a></li>
           <li class="navItem"><a href="contact.html" class="navLink">Contact Me</a></li>
         </ul>
+        </div>
       </div>
     <div class="next">
         <canvas id="myCanvas" width="950" height="30"></canvas>
@@ -28,13 +30,10 @@
     <div class="formDiv">
         <form>
             <label for="contact">Name:</label>
-            <br>
-            <input id="contact" type="text" name="name"><br>
+            <input id="contact" type="text" name="contact"><br>
             <label for="email">Email: </label>
-            <br>
             <input type="text" name="email" id="email"><br>
             <label for="message">Comments or Questions: </label>
-            <br>
             <textarea name="message" id="message" rows="10" cols="30">Type your message here.
             </textarea>
 
