--- a/education.html
+++ b/education.html
@@ -9,6 +9,7 @@
   <body>
       <div class="top">
         <a href="index.html"><img src="images/logo.svg" alt="Logo" class="centerI"></a>
+        <div class = "top-bar">
         <ul id="navigation">
           <li class="navItem"><a href="index.html" class="navLink">Home</a></li>
           <li class="navItem"><a href="about.html" class="navLink">About Me</a></li>
@@ -19,6 +20,7 @@
           <li class="navItem"><a href="profiles.html" class="navLink">Profile Links</a></li>
           <li class="navItem"><a href="contact.html" class="navLink">Contact Me</a></li>
         </ul>
+        </div>
       </div>
     <div class="next">
         <canvas id="myCanvas" width="950" height="30"></canvas>
