many style changes

--- a/profiles.html
+++ b/profiles.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    <div class="top">
-        <a href="index.html"><img src="images/logo.svg" alt="Logo" class="centerI"></a>
+    <div class="top"> 
+      <a href="index.html"><img src="images/logo.svg" alt="Logo" class="logo"></a>
+        </div>
         <div class = "top-bar">
         <ul id="navigation">
           <li class="navItem"><a href="index.html" class="navLink">Home</a></li>
@@ -23,13 +24,9 @@
           <li class="navItem"><a href="contact.html" class="navLink">Contact Me</a></li>
         </ul>
         </div>
-      </div>
-    <div class="next">
-        <canvas id="myCanvas" width="950" height="30"></canvas>
-        <script src="canvas.js"></script>
-        <h1>Links to Profiles</h1>
-    </div>
-    <div class="moved-left">
+        
+    <div class="moved-left-pro">
+        <h1 class="center">Links to Profiles</h1>
     <ul>
             <li><a href="http://www.linkedin.com/in/haley-y-37a752b9">LinkedIn</a></li>
             <li><a href="https://www.codecademy.com/hyerxa">Codecademy</a></li>
