--- a/samples.html
+++ b/samples.html
@@ -7,8 +7,9 @@
       
   </head>
   <body>
-      <div class="top">
-        <a href="index.html"><img src="images/logo.svg" alt="Logo" class="centerI"></a>
+      <div class="top"> 
+      <a href="index.html"><img src="images/logo.svg" alt="Logo" class="logo"></a>
+        </div>
         <div class = "top-bar">
         <ul id="navigation">
           <li class="navItem"><a href="index.html" class="navLink">Home</a></li>
@@ -21,27 +22,21 @@
           <li class="navItem"><a href="contact.html" class="navLink">Contact Me</a></li>
         </ul>
         </div>
-      </div>
-    <div class="next">
-        <canvas id="myCanvas" width="950" height="30"></canvas>
-        <script src="canvas.js"></script>
-        <h1>Work Samples</h1>
-      </div>
       <div class="moved-left-samples">
-      <div>
+          <h1 class="center">Work Samples</h1>
+      <div class="bottom-border">
         <h3>Writing: <a href="projects/fields_report.pdf" id="scratch" target="_blank">Computer Science Fields Report</a></h3>
       </div>
-      <div>
+      <div class="bottom-border">
         <h3>Scratch: <a href="https://scratch.mit.edu/projects/282771216/" target="_blank" id="scratch">Sloth Mania Game</a></h3>
       </div>
-      <div>
+      <div class="bottom-border">
         <h3>Javascript, HTML, CSS: </h3>
           <ul>
             <li><a href="https://hyerxa.github.io/ceasar-cipher/ceasar_cipher.html">Ceasar Cipher</a></li>
           </ul>
       </div>
-      <div>
-        <div>
+      <div class="bottom-border">
             <h3>C++:</h3>
             <img class="left-samples" src="images/C++.svg" alt="C++">
             <ul> 
@@ -51,8 +46,7 @@
                 <li><a href="projects/C++/24.1_Animal_and_Human_OOP_Haley_Yerxa.cpp" target="_blank">OOP basic program</a></li>
             </ul>  
     </div>
-      </div>
-      <div class="next2">
+      <div class="bottom-border">
           <h3>Java:</h3>
           <img class="left-samples" src="images/java.svg" alt="Java">
         <ul>
@@ -67,7 +61,7 @@
             </ul>
         </ul>
       </div>
-      <div>
+      <div class="bottom-border">
         <ul>
           <li class="project">"Knight's Tour" Project that finds a path for a knight to touch each square of the chess board once:</li>
             <ul>
@@ -78,7 +72,7 @@
             </ul>
         </ul>
       </div>
-      <div>
+      <div class="bottom-border">
         <ul>
           <li class="project">Math Test That Tests Basic Integer Addition and Subtraction:</li>
             <ul>
@@ -87,7 +81,7 @@
             </ul>
         </ul>
       </div>
-      <div>
+      <div class="bottom-border">
         <img class="right" src="images/chess.PNG" alt="Last Man Standing Chess">
         <ul>
           <li class="project">"Last Man Standing" Chess:</li>
