--- a/education.html
+++ b/education.html
@@ -7,8 +7,9 @@
       
   </head>
   <body>
-      <div class="top">
-        <a href="index.html"><img src="images/logo.svg" alt="Logo" class="centerI"></a>
+      <div class="top"> 
+      <a href="index.html"><img src="images/logo.svg" alt="Logo" class="logo"></a>
+        </div>
         <div class = "top-bar">
         <ul id="navigation">
           <li class="navItem"><a href="index.html" class="navLink">Home</a></li>
@@ -21,12 +22,9 @@
           <li class="navItem"><a href="contact.html" class="navLink">Contact Me</a></li>
         </ul>
         </div>
-      </div>
-    <div class="next">
-        <canvas id="myCanvas" width="950" height="30"></canvas>
-        <script src="canvas.js"></script>
-        <h1>Education and Training</h1>
-    </div>
+    <div class="moved-left-ed">
+        <h1 class="center">Education and Training</h1>
+    
     <div>
         <img src="images/fgcu_logo.png" class="left" alt="FGCU logo" >
       <h3>Currently a first-year software engineering student at Florida Gulf Coast University</h3>
@@ -45,12 +43,13 @@
           </ul>
       </div>
       <div class="center">
-        <h2>Here is a video of my Valedictory Address highlighting my public speaking skills:</h2>
+        <h2 style="font-size: 1.75vw">Here is a video of my Valedictory Address highlighting my public speaking skills:</h2>
           <video width="500" height="auto" controls>
               <source src="video/valedictory_address.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
       </div>
+        </div>
       <div class="push"></div>
       <div class="bottom"> 
         <div class="center">
