--- a/experience.html
+++ b/experience.html
@@ -7,8 +7,9 @@
       
   </head>
   <body>
-      <div class="top">
-        <a href="index.html"><img src="images/logo.svg" alt="Logo" class="centerI"></a>
+      <div class="top"> 
+      <a href="index.html"><img src="images/logo.svg" alt="Logo" class="logo"></a>
+        </div>
         <div class = "top-bar">
         <ul id="navigation">
           <li class="navItem"><a href="index.html" class="navLink">Home</a></li>
@@ -21,13 +22,8 @@
           <li class="navItem"><a href="contact.html" class="navLink">Contact Me</a></li>
         </ul>
         </div>
-      </div>
-    <div class="next">
-        <canvas id="myCanvas" width="950" height="30"></canvas>
-        <script src="canvas.js"></script>
-        <h1>Work Experience and Community Involvement</h1>
-    </div>
-    <div class="moved-left">
+    <div class="moved-left-exp">
+        <h1 class="center">Work Experience and Community Involvement</h1>
     <div>
       <a href="Haley_Yerxa_Resume_2019.doc" id="resume">Download Resume</a>
     </div>
