--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,16 @@
         <h1 class="center">Contact Me</h1>
         <form>
             <label for="contact">Name:</label>
+            <h3>Name:</h3>
+            <br>
             <input id="contact" type="text" name="contact"><br>
             <label for="email">Email: </label>
+            <h3>Email:</h3>
+            <br>
             <input type="text" name="email" id="email"><br>
             <label for="message">Comments or Questions: </label>
+            <h3>Comments or Questions:</h3>
+            <br>
             <textarea name="message" id="message" rows="10" cols="30">Type your message here.
             </textarea>
 
