--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       
         <div class="gallery">
           <a href="contact.html" class="noUnderline">
-            <img src="images/golf.jpg" alt="Photo at Salvation Army" style="width:100%">
+            <img src="images/contact.jpg" alt="Picture with my dog" style="width:100%">
             <div class="desc">Contact Me</div>
           </a>
         </div>
