add accessibility page

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
           </svg>
           <a href="https://github.com/hyerxa"><img src="images/github.svg" class="social" alt="github"></a>
           <a href="https://www.hackerrank.com/haley_yerxa24"><img src="images/hackerrank.svg" class="social" alt="hackerrank"></a>
+          <a href="accessibility.html" id="access">Accessibility</a>
         </div>
       </div>
   </body>
