--- a/education.html
+++ b/education.html
@@ -61,7 +61,8 @@
           </svg>
           <a href="https://github.com/hyerxa"><img src="images/github.svg" class="social" alt="github"></a>
           <a href="https://www.hackerrank.com/haley_yerxa24"><img src="images/hackerrank.svg" class="social" alt="hackerrank"></a>
-        </div>
+        <a href="accessibility.html" id="access">Accessibility</a>
+          </div>
       </div>
     </body>
 </html>
