completed accessibility page

--- a/accessibility.html
+++ b/accessibility.html
@@ -25,7 +25,26 @@
         </ul>
         </div>
       <div class="moved-left-access">
-      
+        <h3>Images</h3>
+          <p>
+          Images have been provided with alternate text to assist visually-impaired users.
+          </p>
+        <h3>Site Navigation and Links</h3>
+            <p>
+            The navigation bar at the top of the page assists with navigation between pages. It is the same on each page, and all links have been verified. If an error is found with a link, please submit a comment on the Contact page. All of the links are simple text links (no javacript), and they change color to a darker blue upon hovering. Many of the links are also underlined to indicate that they are links. All links open within the same window.
+            </p>
+        <h3>Document Structure</h3>
+            <p>
+            Each page on the site have the same structure, with a navigation bar on top (with pages in the same order), and a fixed bar on the bottom including additional links to social media and this accessibility page. The pages are centered with empty margins to increase clarity and place elements in the center of the screen. The page is divided into linear divisions and headers are used with the flow of the page to increase accessibility.
+            </p>    
+        <h3>Screen and Text Sizing</h3>
+            <p>
+            Every element on this site is designed to fit according to the page size, and resizes with the page. This prevents horizontal scrolling on smaller screens and allows the pages to maintain the same proportions and visual clarity.
+            </p>
+        <h3>Always Improving</h3>
+            <p>
+            This website is periodically modified to maximize the user interaction and make it as clean, visually appealing, and accessible as possible. If you have any suggestions or concerns, please reach out through the form on the contact page. I would love to hear your feedback!
+            </p>         
       </div>
       <!-- Bottom creates fixed footer with social media links -->
       <div class="push"></div>
