sizing of video

--- a/education.html
+++ b/education.html
@@ -44,7 +44,7 @@
       </div>
       <div class="center">
         <h2 style="font-size: 1.75vw">Here is a video of my Valedictory Address highlighting my public speaking skills:</h2>
-          <video width="500" height="auto" controls style="border: 0.5vw solid #417272" alt="valedictory address video">
+          <video controls style="border: 0.5vw solid #417272" alt="valedictory address video" id="video">
               <source src="video/valedictory_address.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
