fixing styling to be same on each page

--- a/accessibility.html
+++ b/accessibility.html
@@ -24,7 +24,7 @@
           <li class="navItem"><a href="contact.html" class="navLink">Contact Me</a></li>
         </ul>
         </div>
-      <div class="moved-left-access">
+      <div class="center-screen">
         <h3>Images</h3>
           <p>
           Images have been provided with alternate text to assist visually-impaired users.
