--- a/experience.html
+++ b/experience.html
@@ -22,7 +22,7 @@
           <li class="navItem"><a href="contact.html" class="navLink">Contact Me</a></li>
         </ul>
         </div>
-    <div class="moved-left-exp">
+    <div class="center-screen">
         <h1 class="center">Work Experience and Community Involvement</h1>
     <div>
       <a href="Haley_Yerxa_Resume_2019.doc" id="resume">Download Resume</a>
