--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
         </div>
      
-      <div class="moved-left-index">
+      <div class="center-screen">
        <!--Javascript link for greeting that changes depending on time of day -->
        <h2 id="greeting">Welcome to my website!</h2>
        <script src = "greeting.js"></script>
