--- a/samples.html
+++ b/samples.html
@@ -22,7 +22,7 @@
           <li class="navItem"><a href="contact.html" class="navLink">Contact Me</a></li>
         </ul>
         </div>
-      <div class="moved-left-samples">
+      <div class="center-screen">
           <h1 class="center">Work Samples</h1>
       <div class="bottom-border">
         <h3>Writing: <a href="projects/fields_report.pdf" id="scratch" target="_blank">Computer Science Fields Report</a></h3>
@@ -38,7 +38,7 @@
       </div>
       <div class="bottom-border">
             <h3>C++:</h3>
-            <img class="left-samples" src="images/C++.svg" alt="C++">
+            <img id="left-samples1" src="images/C++.svg" alt="C++">
             <ul> 
                 <li><a href="projects/C++/11.3_Stat_Haley_Yerxa.cpp">Program that calculates sum, difference and average of two numbers</a></li>
                 <li><a href="projects/C++/13.8_Friendly_Numbers_Haley_Yerxa.cpp">Determines all Friendly Numbers between 1 and 1 million</a></li>
@@ -48,7 +48,7 @@
     </div>
       <div class="bottom-border">
           <h3>Java:</h3>
-          <img class="left-samples" src="images/java.svg" alt="Java">
+          <img id="left-samples2" src="images/java.svg" alt="Java">
         <ul>
           <li class="project">Card Game setup that has shuffling and dealing:</li>
             <ul>
