--- a/accomplishments.html
+++ b/accomplishments.html
@@ -23,7 +23,7 @@
         </ul>
         </div>
       
-    <div class="moved-left-acc">
+    <div class="center-screen">
         <h1 class="center">Top Accomplishments</h1>
           <div class="images">
               <div class="gallery2">
