--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         </div>
       
       
-    <div class="moved-left-contact">
+    <div class="center-screen">
         <h1 class="center">Contact Me</h1>
         <form>
             <label for="contact">Name:</label>
