--- a/education.html
+++ b/education.html
@@ -22,14 +22,15 @@
           <li class="navItem"><a href="contact.html" class="navLink">Contact Me</a></li>
         </ul>
         </div>
-    <div class="moved-left-ed">
+    <div class="center-screen">
         <h1 class="center">Education and Training</h1>
     
-    <div>
+    <div class="bottom-border">
         <img src="images/fgcu_logo.png" class="left" alt="FGCU logo" >
-      <h3>Currently a first-year software engineering student at Florida Gulf Coast University</h3>
+        <h3>Currently a first-year software engineering student at Florida Gulf Coast University</h3>
+        <h3>Graduate from Hillcrest High School, Valedictorian, Gold Crest Distinction</h3>
     </div>
-    <h3>Graduate from Hillcrest High School, Valedictorian, Gold Crest Distinction</h3>
+    
       <div>
         <h3>Relevant Course Syllabi (most to least recent):</h3>
           <ul>
