--- a/profiles.html
+++ b/profiles.html
@@ -25,7 +25,7 @@
         </ul>
         </div>
         
-    <div class="moved-left-pro">
+    <div class="center-screen">
         <h1 class="center">Links to Profiles</h1>
     <ul>
             <li><a href="http://www.linkedin.com/in/haley-y-37a752b9">LinkedIn</a></li>
