--- a/accessibility.html
+++ b/accessibility.html
@@ -1,3 +1,9 @@
+<!--
+Haley Yerxa
+04/29/2019
+My portfolio website
+This page is the accessibility page, contains information about the accessibility of the site
+-->
 <!doctype html>
 <html lang=en>
   <head>
