--- a/accomplishments.html
+++ b/accomplishments.html
@@ -1,3 +1,9 @@
+<!--
+Haley Yerxa
+04/29/2019
+My portfolio website
+This page is the accomplishments page, contains my top accomplishments
+-->
 <!doctype html>
 <html lang=en>
   <head>
