--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,10 @@
+
+<!--
+Haley Yerxa
+04/29/2019
+My portfolio website
+This page is the contact page, contains a form to contact me
+-->
 <!doctype html>
 <html lang=en>
   <head>
