--- a/experience.html
+++ b/experience.html
@@ -1,3 +1,9 @@
+<!--
+Haley Yerxa
+04/29/2019
+My portfolio website
+This page is the work experience page, contains information about my work experience and volunteering
+-->
 <!doctype html>
 <html lang=en>
   <head>
