--- a/profiles.html
+++ b/profiles.html
@@ -1,3 +1,9 @@
+<!--
+Haley Yerxa
+04/29/2019
+My portfolio website
+This page is the profile page, contains links to various profiles
+-->
 <!doctype html>
 <html lang=en>
 
