--- a/samples.html
+++ b/samples.html
@@ -1,3 +1,9 @@
+<!--
+Haley Yerxa
+04/29/2019
+My portfolio website
+This page is the work samples page, contains samples of relevent projects I have completed
+-->
 <!doctype html>
 <html lang=en>
   <head>
@@ -33,7 +39,7 @@
       <div class="bottom-border">
         <h3>Javascript, HTML, CSS: </h3>
           <ul>
-            <li><a href="https://hyerxa.github.io/ceasar-cipher/ceasar_cipher.html">Ceasar Cipher</a></li>
+            <li><a href="https://hyerxa.github.io/ceasar-cipher/encrypt.html">Ceasar Cipher</a></li>
           </ul>
       </div>
       <div class="bottom-border">
