--- a/samples.html
+++ b/samples.html
@@ -31,10 +31,10 @@ This page is the work samples page, contains samples of relevent projects I have
       <div class="center-screen">
           <h1 class="center">Work Samples</h1>
       <div class="bottom-border">
-        <h3>Writing: <a href="projects/fields_report.pdf" id="scratch" target="_blank">Computer Science Fields Report</a></h3>
+        <h3>Writing: <a href="projects/fields_report.pdf" class="scratch" target="_blank">Computer Science Fields Report</a></h3>
       </div>
       <div class="bottom-border">
-        <h3>Scratch: <a href="https://scratch.mit.edu/projects/282771216/" target="_blank" id="scratch">Sloth Mania Game</a></h3>
+        <h3>Scratch: <a href="https://scratch.mit.edu/projects/282771216/" target="_blank" class="scratch">Sloth Mania Game</a></h3>
       </div>
       <div class="bottom-border">
         <h3>Javascript, HTML, CSS: </h3>
@@ -56,7 +56,7 @@ This page is the work samples page, contains samples of relevent projects I have
           <h3>Java:</h3>
           <img id="left-samples2" src="images/java.svg" alt="Java">
         <ul>
-          <li class="project">Card Game setup that has shuffling and dealing:</li>
+          <li class="project">Card Game setup that has shuffling and dealing:
             <ul>
                 <li><a href="projects/java/CardGameProject/CardGameProject.zip">Entire Project</a></li>
                 <li><a href="projects/java/CardGameProject/Card.java"> Card Class</a></li>
@@ -65,32 +65,35 @@ This page is the work samples page, contains samples of relevent projects I have
                 <li><a href="projects/java/CardGameProject/Player.java"> Player Class</a></li>
                 <li><a href="projects/java/CardGameProject/Deck.java"> Deck Class</a></li>
             </ul>
+          </li>
         </ul>
       </div>
       <div class="bottom-border">
         <ul>
-          <li class="project">"Knight's Tour" Project that finds a path for a knight to touch each square of the chess board once:</li>
+          <li class="project">"Knight's Tour" Project that finds a path for a knight to touch each square of the chess board once:
             <ul>
                 <li><a href="projects/java/KnightsTour/KnightsTour.zip">Entire Project</a></li>
                 <li><a href="projects/java/KnightsTour/Board.java"> Chess Board Class</a></li>
                 <li><a href="projects/java/KnightsTour/Game.java"> Game Class that has main program</a></li>
                 <li><a href="projects/java/KnightsTour/Knight.java"> Knight Class</a></li>
             </ul>
+          </li>
         </ul>
       </div>
       <div class="bottom-border">
         <ul>
-          <li class="project">Math Test That Tests Basic Integer Addition and Subtraction:</li>
+          <li class="project">Math Test That Tests Basic Integer Addition and Subtraction:
             <ul>
                 <li><a href="projects/java/MathTestProject/MathTestProject.zip">Entire Project</a></li>
                 <li><a href="projects/java/MathTestProject/MathTest.java"> Main Program</a></li>
             </ul>
+          </li>
         </ul>
       </div>
       <div class="bottom-border">
         <img class="right" src="images/chess.PNG" alt="Last Man Standing Chess">
         <ul>
-          <li class="project">"Last Man Standing" Chess:</li>
+          <li class="project">"Last Man Standing" Chess:
             <ul>
                 <li><a href="projects/java/ChessGameProject/ChessGameProject.zip">Entire Project</a></li>
                 <li><a href="projects/java/ChessGameProject/Game.java"> Main Program</a></li>
@@ -104,13 +107,14 @@ This page is the work samples page, contains samples of relevent projects I have
                 <li><a href="projects/java/ChessGameProject/Knight.java"> Knight Class</a></li>
                 <li><a href="projects/java/ChessGameProject/Player.java"> Player Class</a></li>
             </ul>
+          </li>
         </ul>
       </div>
     </div>
-      <div class="push"></div>
+      
       <div class="bottom"> 
         <div class="center">
-          <a href="http://www.linkedin.com/in/haley-y-37a752b9"><img src="images/linkedin.png" class="social" alt="linkdIn"></a>
+          <a href="https://www.linkedin.com/in/haley-yerxa/"><img src="images/linkedin.png" class="social" alt="linkdIn"></a>
           <a href="https://www.instagram.com/haleyyerxa/"><img src="images/instagram.png" class="social" alt="instagram"></a>
           <svg height="30" width="120" class="social">
             <rect x="0" y="0" rx="10" ry="20" height="23" width="110" style="fill:aliceblue;stroke:lightblue;stroke-width:5;stroke-opacity:0.75" />
