--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ This page is the About Me page, contains a bio and some pictures
     <div class="center-screen">
       <h1 class="center">About Me</h1>
       <div class="usual">
-        <img src="images/me_1.JPG" alt="Prom photo"class="rightI" style="border: 0.5vw solid #417272">
+        <img src="images/me_1.JPG" alt="Prom photo" class="rightI" style="border: 0.5vw solid #417272">
         My name is Haley Yerxa and I am a first-year software engineering student at Florida Gulf Coast University (FGCU). I am also pursuing minors in bioengineering and mathematics, as I am interested in a wide range of fields and I am taking the opportunity to explore my interests. I am just beginning to discover my skills sets as I get introduced to the world programming, so while I might not be the most experienced person, I am very eager to learn. I am someone who loves to take on projects and see them through to completion, and I always strive to put forward my best work possible. What I love so much about programming is how it allows you to take on any problem and come up with a unique solution. I love the thrill that I get when I finally get a piece of code working or when that lightbulb goes on in my head when I figure something out. There’s nothing more gratifying for me than finally breaking through on a project and seeing the results from my hard work.
         <br>
         <img src="images/team.jpg" alt="team photo" id="team" style="border: 0.5vw solid #417272">
@@ -45,7 +45,7 @@ This page is the About Me page, contains a bio and some pictures
       
     <div class="bottom"> 
       <div class="center">
-        <a href="http://www.linkedin.com/in/haley-y-37a752b9"><img src="images/linkedin.png" class="social" alt="linkdIn"></a>
+        <a href="https://www.linkedin.com/in/haley-yerxa/"><img src="images/linkedin.png" class="social" alt="linkdIn"></a>
         <a href="https://www.instagram.com/haleyyerxa/"><img src="images/instagram.png" class="social" alt="instagram"></a>
         <svg height="30" width="120" class="social">
           <rect x="0" y="0" rx="10" ry="20" height="23" width="110" style="fill:aliceblue;stroke:lightblue;stroke-width:5;stroke-opacity:0.75" />
