--- a/accessibility.html
+++ b/accessibility.html
@@ -7,7 +7,7 @@ This page is the accessibility page, contains information about the accessibilit
 <!doctype html>
 <html lang=en>
   <head>
-    <meta charset=utf-8 name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset=utf-8>
     <title>Haley Yerxa</title>
     <!-- Home page -->
     <link rel="stylesheet" href="css/style.css">
@@ -56,7 +56,7 @@ This page is the accessibility page, contains information about the accessibilit
       <div class="push"></div>
       <div class="bottom"> 
         <div class="center">
-          <a href="http://www.linkedin.com/in/haley-y-37a752b9"><img src="images/linkedin.png" class="social" alt="linkdIn"></a>
+          <a href="https://www.linkedin.com/in/haley-yerxa/"><img src="images/linkedin.png" class="social" alt="linkdIn"></a>
           <a href="https://www.instagram.com/haleyyerxa/"><img src="images/instagram.png" class="social" alt="instagram"></a>
           <svg height="30" width="120" class="social">
             <rect x="0" y="0" rx="10" ry="20" height="23" width="110" style="fill:aliceblue;stroke:lightblue;stroke-width:5;stroke-opacity:0.75" />
