--- a/education.html
+++ b/education.html
@@ -50,7 +50,7 @@ This page is the education page, contains information about my education
       </div>
       <div class="center">
         <h2 style="font-size: 1.75vw">Here is a video of my Valedictory Address highlighting my public speaking skills:</h2>
-        <video controls style="border: 0.5vw solid #417272" alt="valedictory address video" id="video">
+        <video controls style="border: 0.5vw solid #417272" id="video">
           <source src="video/valedictory_address.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
@@ -58,7 +58,7 @@ This page is the education page, contains information about my education
     </div>
       <div class="bottom"> 
         <div class="center">
-          <a href="http://www.linkedin.com/in/haley-y-37a752b9"><img src="images/linkedin.png" class="social" alt="linkdIn"></a>
+          <a href="https://www.linkedin.com/in/haley-yerxa/"><img src="images/linkedin.png" class="social" alt="linkdIn"></a>
           <a href="https://www.instagram.com/haleyyerxa/"><img src="images/instagram.png" class="social" alt="instagram"></a>
           <svg height="30" width="120" class="social">
             <rect x="0" y="0" rx="10" ry="20" height="23" width="110" style="fill:aliceblue;stroke:lightblue;stroke-width:5;stroke-opacity:0.75" />
