--- a/profiles.html
+++ b/profiles.html
@@ -34,7 +34,7 @@ This page is the profile page, contains links to various profiles
     <div class="center-screen">
         <h1 class="center">Links to Profiles</h1>
     <ul>
-            <li><a href="http://www.linkedin.com/in/haley-y-37a752b9">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/haley-yerxa/">LinkedIn</a></li>
             <li><a href="https://www.codecademy.com/hyerxa">Codecademy</a></li>
             <li><a href="https://fgcuathletics.com/roster.aspx?rp_id=5727&path=wgolf">FGCU Women's Golf Profile</a></li>
             <li><a href="https://www.hackerrank.com/haley_yerxa24">HackerRank</a></li>
@@ -63,7 +63,7 @@ This page is the profile page, contains links to various profiles
       <div class="push"></div>
       <div class="bottom"> 
         <div class="center">
-          <a href="http://www.linkedin.com/in/haley-y-37a752b9"><img src="images/linkedin.png" class="social" alt="linkdIn"></a>
+          <a href="https://www.linkedin.com/in/haley-yerxa/"><img src="images/linkedin.png" class="social" alt="linkdIn"></a>
           <a href="https://www.instagram.com/haleyyerxa/"><img src="images/instagram.png" class="social" alt="instagram"></a>
           <svg height="30" width="120" class="social">
             <rect x="0" y="0" rx="10" ry="20" height="23" width="110" style="fill:aliceblue;stroke:lightblue;stroke-width:5;stroke-opacity:0.75" />
