fixing overflow issue

--- a/samples.html
+++ b/samples.html
@@ -41,7 +41,7 @@ This page is the work samples page, contains samples of relevent projects I have
         </div>
       
         <div class="bottom-border">
-          <h3>Javascript, HTML, CSS: </h3>
+          <h3>JavaScript, HTML, CSS: </h3>
           <ul>
             <li><a href="https://hyerxa.github.io/ceasar-cipher/encrypt.html">Ceasar Cipher</a></li>
           </ul>
