--- a/accomplishments.html
+++ b/accomplishments.html
@@ -53,8 +53,8 @@ This page is the accomplishments page, contains my top accomplishments
       <div class="acc-list">
         <ul id="achievements">
           <li>2nd Place, Hertz Hackathon, February 2019</li>    
-          <li>FGCU President's List, Fall 2018</li>
-          <li>Member of FGCU Women's Golf Team, Fall 2018</li>
+          <li>FGCU President's List, Fall 2018, Spring 2019</li>
+          <li>Member of FGCU Women's Golf Team, Fall 2018-present</li>
           <li>Golf Canada National Order of Merit, ranked 26th nationally, August 2018</li>
           <li>Golf Quebec Provincial Order of Merit, ranked 5th provincially, August 2018</li>
           <li>Champion of several Golf Tournaments</li>
