--- a/education.html
+++ b/education.html
@@ -33,20 +33,17 @@ This page is the education page, contains information about my education
     
       <div class="bottom-border"> <!-- puts a border on bottom of div to separate content -->
         <img src="images/fgcu_logo.png" class="left" alt="FGCU logo" >
-        <h3>Currently a first-year software engineering student at Florida Gulf Coast University</h3>
+        <h3>Currently a second-year software engineering student at Florida Gulf Coast University</h3>
         <h3>Graduate from Hillcrest High School, Valedictorian, Gold Crest Distinction</h3>
       </div>
     
       <div class="bottom-border">
         <h3>Relevant Course Syllabi (most to least recent):</h3>
           <ul>
-            <li><a href="syllabi/comp_tools.pdf">Computational Tools for Engineering</a></li>
-            <li><a href="syllabi/physics1.docx">Physics 1</a></li>
-            <li><a href="syllabi/calc2.pdf">Calculus 2</a></li>
-            <li><a href="https://sites.google.com/view/prof-v/lms/cop-1500">Introduction to Computer Science (link to course website)</a></li>
-            <li><a href="syllabi/bio.pdf">Biology 1</a></li>
-            <li><a href="syllabi/calc1.pdf">Calculus 1</a></li>
-            <li><a href="syllabi/intro_eng.pdf">Introduction to Engineering</a></li>
+            <li><a href="syllabi/programming_method.docx">Programming Methodology</a></li>
+            <li><a href="syllabi/discrete_math.pdf">Discrete Math</a></li>
+            <li><a href="syllabi/diff_eq.pdf">Differential Equations</a></li>
+            <li><a href="syllabi/intro_programming.pdf">Introduction to Programming</a></li>
           </ul>
       </div>
       <div class="center">
