--- a/experience.html
+++ b/experience.html
@@ -34,16 +34,17 @@ This page is the work experience page, contains information about my work experi
       <h1 class="center">Work Experience and Community Involvement</h1>
       
       <div>
-        <a href="Haley_Yerxa_Resume_2019.doc" id="resume">Download Resume</a>
+        <a href="Haley_Yerxa_Resume_2020.doc" id="resume">Download Resume</a>
       </div>
     
       <div>
         <h4>Highlights:</h4>
         <ul>
+          <li>Software Development Student at Blackberry, Summer 2019</li>
+          <li>University tutor in Calclulus, Biology, and Physics</li?
           <li>Current Volunteer at Gulf Coast Humane Society</li>
           <li>Taught beginner piano lessons to young children</li>
           <li>Volunteered at the CME Group LPGA Tour Championship</li>
-          <li>Tutor in various subjects including math, chemistry, physics, and biology</li>
           <li>Ski Teaching Assistant at Camp Fortune Ski Hill</li>
           <li>Golf Camp and Clinic Volunteer</li>
         </ul>
